infrastructure/controllers/ceph-dashboard/ceph-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard
  namespace: ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Ceph Dashboard"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/href: "https://ceph.lab.mainertoo.com"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ceph.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: ceph-dashboard
          port: 8443
          scheme: https
          serversTransport: ceph-dashboard-insecure
  tls: {}
